@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #ADD1B2
    ArrowColor #2A2A2A
    BorderColor #2A2A2A
}

abstract class Command {
  # parser: Parser
  # ui: Ui
  + execute() : void
}

class DeleteInternshipCommand {
  - internshipList: InternshipList
  - interviewList: InterviewList
  + execute() : void
}

class InternshipList {
  - internships: List<Internship>
  + add(internship: Internship) : void
  + delete(index: int) : void
  + get(index: int) : Internship
  + getSize() : int
  + getInternships() : List<Internship>
}

class InterviewList {
  - interviews: List<Interview>
  + deleteByInternship(internship: Internship) : void
  + getInterviews() : List<Interview>
  + size() : int
}

class Internship {
  - title: String
  - companyName: String
  - interview: Interview
  + getCompanyName() : String
  + getTitle() : String
  + getInterview() : Interview
  + deleteInterview() : void
}

class Interview {
}

Command <|-- DeleteInternshipCommand
DeleteInternshipCommand --> "1" InternshipList
DeleteInternshipCommand --> "1" InterviewList
InternshipList o--> "many" Internship
InterviewList o--> "many" Interview
Internship --> "0..1" Interview
@enduml